# justrunmydebugger

./: .gitignore  Makefile  README.md  _config.yml  bsconfig.json  index.md  main.yml  package-lock.json  package.json  rollup.config.js
.github/workflows/: main.yml
.tauri/update/appimage/: latest.json
.tauri/update/win64/: latest.json
_layouts/: default.html
assets/css/: style.scss
src/: Api.res  App.res  AppHooks.res  AppTypes.res  AppVersion.res  BoardList.res  GitpodButton.res  MaterialUiUtils.res  MuiUtils.res  Openocd.res  Root.res  SettingsContext.res  SnackbarOpenocdMessages.res  StartButton.res  StartStopButton.res  Tauri.res  index.html  main.res
src-tauri/: Cargo.toml  tauri-bundle.overlay.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app.rs  cmd.rs  config.rs  error.rs  main.rs  notification.rs  openocd.rs  state.rs
src-tauri/src/gitpod/: config.rs  events.rs  mod.rs  proc.rs
src-tauri/src/openocd/: config.rs  event.rs  events.rs  mod.rs  output.rs  paths.rs  proc.rs
src/Gitpod/: Gitpod.res  Gitpod_Fab.res  Gitpod_State.res  Gitpod_TextField.res
src/MuiExt/: MuiExt.res  MuiExt_Icon.res  MuiExt_Loading.res  MuiExt_LoadingButton.res
src/ReactExt/: ReactExt.res  ReactExt_Context.res
src/Utils/: Utils.res  Utils_Event.res  Utils_Json.res  Utils_String.res
src/notistack/: Notistack.res
