[package]
name = "justrunmydebugger"
version = "0.1.0"
description = "A Tauri justrunmydebugger"
authors = ["ila", "mrlisdim"]
license = "GPL-3.0-or-later"
repository = ""
default-run = "justrunmydebugger"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.6", features = [] }
which = "4.2.2"
threadpool = "1.8.1"
log = "0.4.14"
env_logger = "0.9.0"
strum = "0.21.0"
strum_macros = "0.21.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
