[package]
name = "justrunmydebugger"
version = "0.1.0"
description = "A Tauri justrunmydebugger"
authors = ["ila", "mrlisdim"]
license = "GPL-3.0-or-later"
repository = ""
default-run = "justrunmydebugger"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "^0.1.7"
tauri = { version = "1.0.0-beta.8", features = ["updater"] }
which = "4.2.2"
threadpool = "1.8.1"
log = "0.4.14"
env_logger = "0.9.0"
walkdir = "^2.3.2"
confy = "^0.4.0"
regex = "^1.5.4"
lazy_static = "^1.4.0"
winapi = { version = "0.3.6" }
sysinfo = "0.20.5"
command-group ="1.0.8"
gitpod-ports-backwarder = { git = "https://github.com/ila-embsys/gitpod-ports-backwarder.git", tag = "v0.1.0" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
